tests/fail/null/6.has
function main() : int {
    var a : int^ = new int(1)
    a = 1

    return 0
}